Change: temporarily add ox and @ethereumjs/rlp libs as deps until we migrate away from the Client API to the GridPlus functional API

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@ensdomains/eth-ens-namehash": "^2.0.15",
+    "@ethereumjs/rlp": "5.0.2",
     "@ethersproject/providers": "5.5.2",
     "@ethersproject/shims": "^5.5.0",
     "@expo-google-fonts/poppins": "0.2.2",
@@ -174,6 +175,7 @@
     "lru-cache": "6.0.0",
     "mini-css-extract-plugin": "^2.7.6",
     "nanoid": "4.0.0",
+    "ox": "0.8.9",
     "path-browserify": "0.0.0",
     "process": "^0.11.0",
     "purify-ts": "2.1.0",
