--- a/.github/workflows/e2e-playwright-tests.yml
+++ b/.github/workflows/e2e-playwright-tests.yml
@@ -60,7 +60,8 @@ jobs:
       SA_PASSPHRASE: ${{ secrets.SA_PASSPHRASE }}
       DEFAULT_INVITATION_CODE_DEV: ${{ vars.DEFAULT_INVITATION_CODE_DEV }}
       SEED_24_WORDS: ${{ secrets.SEED_24_WORDS }}
-      SHOULD_RUN_TREZOR_TESTS: 'true' # Optional fix to avoid Git fetch timeout
+      SHOULD_RUN_TREZOR_TESTS: 'true'
+      PLAYWRIGHT_SKIP_GIT_METADATA: '1' # Optional fix to avoid Git fetch timeout
       # Enables Playwright to intercept network requests initiated by Service Workers.
       # We use it to mock or block background requests that can't be intercepted via page.route().
       PW_EXPERIMENTAL_SERVICE_WORKER_NETWORK_EVENTS: '1'
