adjust e2e workflow trigger

--- a/.github/workflows/e2e-playwright-tests.yml
+++ b/.github/workflows/e2e-playwright-tests.yml
@@ -6,7 +6,7 @@ on:
       - v2
       - main
   pull_request:
-    types: ['ready_for_review', 'synchronize']
+    types: ['opened', 'ready_for_review', 'synchronize']
     branches:
       - v2
       - main
