Change: use gridplus pre-release sdk for Ambire Next with EIP-7702 support

--- a/package.json
+++ b/package.json
@@ -157,7 +157,8 @@
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
-    "gridplus-sdk": "https://pkg.pr.new/GridPlus/gridplus-sdk@e3d6ac0",
+    "gridplus-sdk": "3.4.0",
+    "gridplus-sdk-e3d6ac0": "https://pkg.pr.new/GridPlus/gridplus-sdk@e3d6ac0",
     "https-browserify": "~0.0.0",
     "i18next": "^21.6.0",
     "intro.js": "^7.2.0",
