--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
+    "fuse.js": "7.1.0",
     "gridplus-sdk": "3.4.0",
     "gridplus-sdk-e3d6ac0": "https://pkg.pr.new/GridPlus/gridplus-sdk@e3d6ac0",
     "https-browserify": "~0.0.0",
