rename: check-safe to check-new

--- a/.github/workflows/e2e-playwright-tests.yml
+++ b/.github/workflows/e2e-playwright-tests.yml
@@ -91,7 +91,7 @@ jobs:
         shell: bash
 
       - name: Ensure no new Typescript errors are introduced
-        run: yarn extension:type:check-safe
+        run: yarn extension:type:check-new
         shell: bash
 
       - name: Build webkit extension
