--- a/package.json
+++ b/package.json
@@ -253,6 +253,8 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.23.3",
     "@expo/webpack-config": "^18.0.4",
+    "@lifi/types": "^17.46.0",
+    "@types/aes-js": "^3.1.4",
     "@types/chrome": "^0.0.212",
     "@types/crypto-js": "^4.1.1",
     "@types/debounce": "1.2.1",
