chore: fix new package versions

--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "@types/js-yaml": "^4.0.9",
     "@types/react-dom": "^18.2.0",
     "@types/w3c-web-hid": "^1.0.6",
-    "aes-js": "^3.1.2",
+    "aes-js": "3.1.2",
     "babel-jest": "^29.5.0",
     "babel-plugin-module-resolver": "4.1.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
@@ -253,7 +253,7 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.23.3",
     "@expo/webpack-config": "^18.0.4",
-    "@lifi/types": "^17.46.0",
+    "@lifi/types": "17.46.0",
     "@types/aes-js": "^3.1.4",
     "@types/chrome": "^0.0.212",
     "@types/crypto-js": "^4.1.1",
@@ -297,7 +297,7 @@
     "sass-loader": "^16.0.1",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.1.2",
-    "tsc-baseline": "^1.9.0",
+    "tsc-baseline": "1.9.0",
     "typescript": "^5.8.3",
     "webpack": "^5.64.4",
     "webpack-cli": "^5.1.1",
