--- a/.github/workflows/e2e-playwright-tests.yml
+++ b/.github/workflows/e2e-playwright-tests.yml
@@ -90,9 +90,9 @@ jobs:
         run: yarn install --frozen-lockfile
         shell: bash
 
-      - name: Ensure no new Typescript errors are introduced
-        run: yarn extension:type:check-new
-        shell: bash
+      # - name: Ensure no new Typescript errors are introduced
+      #   run: yarn extension:type:check-new
+      #   shell: bash
 
       - name: Build webkit extension
         run: yarn build:web:webkit
