--- a/.github/workflows/typescript-errors.yml
+++ b/.github/workflows/typescript-errors.yml
@@ -7,7 +7,6 @@ on:
       - main
       - 'release/*'
   pull_request:
-    types: ['opened', 'ready_for_review', 'synchronize']
     branches:
       - v2
       - main
@@ -21,9 +20,7 @@ concurrency:
 jobs:
   typescript-errors:
     runs-on: ubuntu-latest
-    environment: testing
-    # This will run for pushes, PRs (ready_for_review/synchronize), and manual dispatch
-    if: github.event_name != 'pull_request' || github.event.pull_request.draft == false || github.event_name == 'workflow_dispatch'
+    environment: typescript-check
 
     steps:
       - name: Checkout full Git history
