Change: E2E - stop `junit` report, because `html-report` is all we needed for tracing the problem. Document why `video` option is not working in our extension setup and stop recording all the videos.

--- a/.github/workflows/e2e-playwright-tests.yml
+++ b/.github/workflows/e2e-playwright-tests.yml
@@ -131,7 +131,7 @@ jobs:
         if: always()
         working-directory: ./e2e-playwright-tests
         run: |
-          zip -r playwright-report.zip test-results/ html-report/
+          zip -r playwright-report.zip html-report/
         continue-on-error: true
 
       - name: Save test report as artifact
