--- a/package.json
+++ b/package.json
@@ -182,9 +182,9 @@
     "process": "^0.11.0",
     "purify-ts": "2.1.0",
     "querystring-es3": "~0.2.0",
-    "react": "^19.3.0-canary-24d8716e-20260123",
+    "react": "18.3.0",
     "react-custom-roulette": "^1.4.1",
-    "react-dom": "^19.3.0-canary-24d8716e-20260123",
+    "react-dom": "18.3.0",
     "react-dropzone": "^14.2.3",
     "react-fast-compare": "^3.2.2",
     "react-hook-form": "^7.21.0",
