refactor the reverse lookup handling on the FE + remove redundant/duplicating hooks and contexts

--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "build:extensions:gecko": "sh ./scripts/build-extensions.sh --gecko",
     "build:extensions:webkit": "sh ./scripts/build-extensions.sh --webkit",
     "build:extensions:next:webkit": "AMBIRE_NEXT=true yarn build:extensions:webkit",
-    "build:web:benzin": "rm -rf ./build/benzin-prod && APP_ENV=production WEBPACK_BUILD_OUTPUT_PATH=benzin-prod expo export:web",
-    "build:web:legends": "rm -rf ./build/legends-prod && WEBPACK_BUILD_OUTPUT_PATH=legends-prod expo export:web",
+    "build:web:benzin": "rm -rf ./build/benzin-prod && APP_ENV=production BENZIN=true WEBPACK_BUILD_OUTPUT_PATH=benzin-prod expo export:web",
+    "build:web:legends": "rm -rf ./build/legends-prod && LEGENDS=true WEBPACK_BUILD_OUTPUT_PATH=legends-prod expo export:web",
     "export:web:webkit:sourcemaps": "sh ./scripts/export-source-maps.sh webkit",
     "export:web:gecko:sourcemaps": "sh ./scripts/export-source-maps.sh gecko",
     "publish:development": "expo publish --release-channel development",
