--- a/.github/workflows/legends.yml
+++ b/.github/workflows/legends.yml
@@ -38,7 +38,7 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn setup:ci
         shell: bash
 
       - name: Build project 🛠️
