--- a/.github/workflows/typescript-errors.yml
+++ b/.github/workflows/typescript-errors.yml
@@ -50,7 +50,7 @@ jobs:
           node-version: 22.12.0
 
       - name: Install root dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn setup
         shell: bash
 
       - name: Ensure no new Typescript errors are introduced
