Fix: Pin exact LavaMoat packages versions.

--- a/package.json
+++ b/package.json
@@ -252,8 +252,8 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.23.3",
     "@expo/webpack-config": "^18.0.4",
-    "@lavamoat/allow-scripts": "^3.4.2",
-    "@lavamoat/preinstall-always-fail": "^2.1.1",
+    "@lavamoat/allow-scripts": "3.4.2",
+    "@lavamoat/preinstall-always-fail": "2.1.1",
     "@lifi/types": "17.46.0",
     "@types/aes-js": "^3.1.4",
     "@types/chrome": "^0.0.212",
