--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "@ethersproject/shims": "^5.5.0",
     "@expo-google-fonts/poppins": "0.2.2",
     "@expo-google-fonts/roboto": "^0.2.3",
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "15.0.3",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
@@ -96,10 +96,10 @@
     "@noble/hashes": "^1.8.0",
     "@otplib/preset-default": "^12.0.1",
     "@raugfer/jazzicon": "^1.0.6",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/checkbox": "^0.5.12",
-    "@react-native-community/netinfo": "9.3.5",
-    "@react-native-masked-view/masked-view": "0.2.8",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "6.3.1",
     "@react-navigation/drawer": "6.5.7",
     "@react-navigation/elements": "1.3.3",
@@ -113,12 +113,13 @@
     "@trezor/connect-webextension": "9.6.4",
     "@trezor/trezor-user-env-link": "^1.0.0",
     "@types/js-yaml": "^4.0.9",
-    "@types/react-dom": "^18.2.0",
+    "@types/react-dom": "19.1.7",
     "@types/w3c-web-hid": "^1.0.6",
     "aes-js": "3.1.2",
     "babel-jest": "^29.5.0",
     "babel-plugin-module-resolver": "4.1.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "babel-preset-expo": "^54.0.10",
     "bip39": "^3.1.0",
     "bip44-constants": "^128.0.0",
     "browserify-zlib": "~0.1.4",
@@ -138,27 +139,27 @@
     "eth-rpc-errors": "^4.0.3",
     "ethers": "6.14.1",
     "events": "^3.3.0",
-    "expo": "^47.0.0",
-    "expo-application": "~5.0.1",
-    "expo-asset": "~8.7.0",
-    "expo-barcode-scanner": "~12.1.0",
-    "expo-blur": "~12.0.1",
-    "expo-clipboard": "~4.0.1",
-    "expo-constants": "~14.0.2",
-    "expo-device": "~5.0.0",
-    "expo-document-picker": "~11.0.1",
-    "expo-face-detector": "~12.0.0",
-    "expo-font": "~11.0.1",
-    "expo-intent-launcher": "~10.3.1",
-    "expo-linear-gradient": "~12.0.1",
-    "expo-linking": "~3.3.0",
-    "expo-local-authentication": "~13.0.2",
-    "expo-localization": "~14.0.0",
-    "expo-secure-store": "~12.0.0",
-    "expo-sharing": "~11.0.1",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "expo-updates": "~0.15.6",
+    "expo": "54.0.32",
+    "expo-application": "7.0.8",
+    "expo-asset": "12.0.12",
+    "expo-barcode-scanner": "13.0.1",
+    "expo-blur": "15.0.8",
+    "expo-clipboard": "8.0.8",
+    "expo-constants": "18.0.13",
+    "expo-device": "8.0.10",
+    "expo-document-picker": "14.0.8",
+    "expo-face-detector": "13.0.2",
+    "expo-font": "14.0.11",
+    "expo-intent-launcher": "13.0.8",
+    "expo-linear-gradient": "15.0.8",
+    "expo-linking": "8.0.11",
+    "expo-local-authentication": "17.0.8",
+    "expo-localization": "17.0.8",
+    "expo-secure-store": "15.0.8",
+    "expo-sharing": "14.0.8",
+    "expo-splash-screen": "31.0.13",
+    "expo-status-bar": "3.0.9",
+    "expo-updates": "29.0.16",
     "fuse.js": "7.1.0",
     "gridplus-sdk": "4.0.0",
     "https-browserify": "~0.0.0",
@@ -173,8 +174,8 @@
     "lodash": "4.17.21",
     "loglevel": "^1.9.2",
     "lottie-ios": "3.4.0",
-    "lottie-react": "^2.3.1",
-    "lottie-react-native": "^5.1.4",
+    "lottie-react": "2.4.1",
+    "lottie-react-native": "7.3.5",
     "lru-cache": "6.0.0",
     "mini-css-extract-plugin": "^2.7.6",
     "nanoid": "4.0.0",
@@ -183,25 +184,25 @@
     "process": "^0.11.0",
     "purify-ts": "2.1.0",
     "querystring-es3": "~0.2.0",
-    "react": "18.3.0",
+    "react": "19.1.0",
     "react-custom-roulette": "^1.4.1",
-    "react-dom": "18.3.0",
+    "react-dom": "19.1.0",
     "react-dropzone": "^14.2.3",
     "react-fast-compare": "^3.2.2",
-    "react-hook-form": "^7.21.0",
+    "react-hook-form": "7.71.1",
     "react-i18next": "^11.14.3",
     "react-idle-timer": "^5.7.2",
-    "react-native": "0.70.5",
+    "react-native": "0.81.5",
     "react-native-android-location-services-dialog-box": "2.8.2",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-ble-plx": "^2.0.3",
     "react-native-confirmation-code-field": "^7.3.0",
     "react-native-error-boundary": "^1.2.3",
     "react-native-fast-crypto": "^2.2.0",
-    "react-native-fast-image": "^8.5.11",
+    "react-native-fast-image": "8.6.3",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.10.1",
-    "react-native-get-random-values": "~1.8.0",
+    "react-native-gesture-handler": "2.28.0",
+    "react-native-get-random-values": "1.11.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-mmkv": "^2.4.3",
@@ -211,14 +212,14 @@
     "react-native-quick-base64": "^2.0.5",
     "react-native-quick-crypto": "^0.5.0",
     "react-native-randombytes": "^3.0.0",
-    "react-native-reanimated": "~2.12.0",
+    "react-native-reanimated": "2.12.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-screens": "4.20.0",
     "react-native-skeleton-placeholder": "^5.0.0",
     "react-native-step-indicator": "^1.0.3",
-    "react-native-svg": "14.1.0",
-    "react-native-web": "0.18.12",
-    "react-native-webview": "^12.0.2",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "0.21.2",
+    "react-native-webview": "13.15.0",
     "react-router-dom": "^6.8.1",
     "react-tooltip": "^5.26.3",
     "readable-stream": "1.0.33",
@@ -226,7 +227,7 @@
     "rxjs": "^7.8.2",
     "scrypt-js": "^3.0.1",
     "secp256k1": "^5.0.1",
-    "sentry-expo": "~6.0.0",
+    "sentry-expo": "7.0.1",
     "setimmediate": "^1.0.5",
     "siwe": "3.0.0",
     "stream-browserify": "^3.0.0",
@@ -247,11 +248,13 @@
     "webextension-polyfill": "^0.10.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.2",
+    "@babel/core": "7.26.10",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/plugin-transform-export-namespace-from": "7.27.1",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.23.3",
-    "@expo/webpack-config": "^18.0.4",
+    "@expo/webpack-config": "18.1.4",
     "@lavamoat/allow-scripts": "3.4.2",
     "@lavamoat/preinstall-always-fail": "2.1.1",
     "@lifi/types": "17.46.0",
@@ -264,7 +267,7 @@
     "@types/jest": "^26.0.14",
     "@types/koa-compose": "3.2.5",
     "@types/lodash": "4.14.191",
-    "@types/react": "18.3.12",
+    "@types/react": "19.1.10",
     "@types/react-native": "~0.70.6",
     "@types/react-test-renderer": "17.0.1",
     "@types/uuid": "9.0.0",
@@ -275,7 +278,6 @@
     "copy-webpack-plugin": "^10.2.0",
     "css-loader": "^7.1.2",
     "dotenv": "^16.3.1",
-    "eas-cli": "^3.13.2",
     "eslint": "8.57.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "18.0.0",
@@ -300,7 +302,7 @@
     "style-loader": "^4.0.0",
     "ts-jest": "^29.1.2",
     "tsc-baseline": "1.9.0",
-    "typescript": "^5.8.3",
+    "typescript": "5.9.3",
     "webpack": "^5.64.4",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.11.1",
@@ -308,9 +310,6 @@
     "webpack-target-webextension": "^1.1.2"
   },
   "resolutions": {
-    "@types/react": "18.3.12",
-    "expo-modules-autolinking": "~0.10.1",
-    "@babel/core": "^7.20.2",
     "babel-loader": "8.3.0",
     "elliptic": "^6.6.1"
   },
