--- a/package.json
+++ b/package.json
@@ -105,9 +105,8 @@
     "@react-navigation/elements": "1.3.3",
     "@react-navigation/native": "6.0.10",
     "@react-navigation/native-stack": "6.6.2",
-    "@sentry/browser": "^9.33.0",
-    "@sentry/react": "^9.28.0",
-    "@sentry/react-native": "5.0.0-alpha.10",
+    "@sentry/browser": "10.37.0",
+    "@sentry/react": "10.37.0",
     "@tradle/react-native-http": "^2.0.0",
     "@trezor/connect-plugin-ethereum": "9.1.3",
     "@trezor/connect-webextension": "9.6.4",
