Added: EXPO_OS=web flag

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "ios": "EAS_BUILD_PLATFORM=ios bash ./scripts/expo-build-post-install.sh && expo run:ios",
     "ios:staging": "APP_ENV=staging yarn ios",
     "ios:production": "APP_ENV=production yarn ios",
-    "web:webkit": "rm -rf ./build/webkit-dev && WEB_ENGINE=webkit WEBPACK_BUILD_OUTPUT_PATH=webkit-dev APP_ENV=development expo start --web",
+    "web:webkit": "rm -rf ./build/webkit-dev && WEB_ENGINE=webkit WEBPACK_BUILD_OUTPUT_PATH=webkit-dev APP_ENV=development EXPO_OS=web expo start --web",
     "web:next:webkit": "AMBIRE_NEXT=true yarn web:webkit",
     "web:safari": "./scripts/safari-dev-build.sh",
-    "web:gecko": "rm -rf ./build/gecko-dev && WEB_ENGINE=gecko WEBPACK_BUILD_OUTPUT_PATH=gecko-dev APP_ENV=development expo start --web",
-    "web:benzin": "rm -rf ./build/benzin-dev && WEBPACK_BUILD_OUTPUT_PATH=benzin-dev APP_ENV=development RCT_METRO_PORT=3006 WEB_PORT=3000 expo start --web",
-    "web:legends": "rm -rf ./build/legends-dev && WEBPACK_BUILD_OUTPUT_PATH=legends-dev APP_ENV=development RCT_METRO_PORT=3006 WEB_PORT=3000 expo start --web",
+    "web:gecko": "rm -rf ./build/gecko-dev && WEB_ENGINE=gecko WEBPACK_BUILD_OUTPUT_PATH=gecko-dev APP_ENV=development EXPO_OS=web expo start --web",
+    "web:benzin": "rm -rf ./build/benzin-dev && WEBPACK_BUILD_OUTPUT_PATH=benzin-dev APP_ENV=development RCT_METRO_PORT=3006 WEB_PORT=3000 EXPO_OS=web expo start --web",
+    "web:legends": "rm -rf ./build/legends-dev && WEBPACK_BUILD_OUTPUT_PATH=legends-dev APP_ENV=development RCT_METRO_PORT=3006 WEB_PORT=3000 EXPO_OS=web expo start --web",
     "start": "react-native start",
     "start:clean": "react-native start --reset-cache",
     "start:staging": "APP_ENV=staging yarn start",
