--- a/package.json
+++ b/package.json
@@ -63,9 +63,9 @@
   },
   "dependencies": {
     "@ambire/signature-validator": "^1.5.0",
-    "@babel/plugin-proposal-decorators": "~7.22.7",
+    "@babel/plugin-proposal-decorators": "7.28.6",
     "@babel/plugin-transform-class-properties": "7.28.6",
-    "@babel/plugin-proposal-private-methods": "~7.18.6",
+    "@babel/plugin-transform-private-methods": "7.28.6",
     "@babel/plugin-transform-typescript": "^7.23.3",
     "@babel/preset-react": "^7.24.7",
     "@babel/runtime": "^7.20.6",
