Update: upgrade @babel/preset-env and @babel/preset-typescript to latest versions in package.json and yarn.lock

--- a/package.json
+++ b/package.json
@@ -252,8 +252,8 @@
     "@babel/plugin-transform-export-namespace-from": "7.27.1",
     "@babel/plugin-transform-private-methods": "7.28.6",
     "@babel/plugin-transform-typescript": "7.28.6",
-    "@babel/preset-env": "^7.22.5",
-    "@babel/preset-typescript": "^7.23.3",
+    "@babel/preset-env": "7.28.6",
+    "@babel/preset-typescript": "7.28.5",
     "@expo/webpack-config": "18.1.4",
     "@lavamoat/allow-scripts": "3.4.2",
     "@lavamoat/preinstall-always-fail": "2.1.1",
