--- a/package.json
+++ b/package.json
@@ -63,8 +63,6 @@
   },
   "dependencies": {
     "@ambire/signature-validator": "^1.5.0",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/runtime": "^7.20.6",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -253,7 +251,9 @@
     "@babel/plugin-transform-private-methods": "7.28.6",
     "@babel/plugin-transform-typescript": "7.28.6",
     "@babel/preset-env": "7.28.6",
+    "@babel/preset-react": "7.28.5",
     "@babel/preset-typescript": "7.28.5",
+    "@babel/runtime": "7.28.6",
     "@expo/webpack-config": "18.1.4",
     "@lavamoat/allow-scripts": "3.4.2",
     "@lavamoat/preinstall-always-fail": "2.1.1",
