--- a/package.json
+++ b/package.json
@@ -162,7 +162,7 @@
     "intro.js-react": "^1.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-expo": "^48.0.1",
+    "jest-expo": "54.0.16",
     "js-yaml": "^4.1.0",
     "koa-compose": "^4.1.0",
     "lodash": "4.17.21",
@@ -264,7 +264,7 @@
     "@types/debounce": "1.2.1",
     "@types/firefox-webext-browser": "^109.0.0",
     "@types/hdkey": "^0.7.0",
-    "@types/jest": "^26.0.14",
+    "@types/jest": "29.5.14",
     "@types/koa-compose": "3.2.5",
     "@types/lodash": "4.14.191",
     "@types/react": "19.1.10",
