--- a/package.json
+++ b/package.json
@@ -206,7 +206,7 @@
     "react-native-quick-base64": "^2.0.5",
     "react-native-quick-crypto": "^0.5.0",
     "react-native-randombytes": "^3.0.0",
-    "react-native-reanimated": "2.12.0",
+    "react-native-reanimated": "4.1.1",
     "react-native-safe-area-context": "5.6.2",
     "react-native-screens": "4.16.0",
     "react-native-skeleton-placeholder": "^5.0.0",
@@ -214,6 +214,7 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "0.21.2",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "react-router-dom": "^6.8.1",
     "react-tooltip": "^5.26.3",
     "readable-stream": "1.0.33",
