--- a/package.json
+++ b/package.json
@@ -222,7 +222,6 @@
     "rxjs": "^7.8.2",
     "scrypt-js": "^3.0.1",
     "secp256k1": "^5.0.1",
-    "sentry-expo": "7.0.1",
     "setimmediate": "^1.0.5",
     "siwe": "3.0.0",
     "stream-browserify": "^3.0.0",
@@ -328,9 +327,7 @@
       "eth-crypto>ethereumjs-util>ethereum-cryptography>keccak": false,
       "eth-crypto>ethereumjs-util>ethereum-cryptography>secp256k1": false,
       "postinstall-postinstall": false,
-      "secp256k1": false,
-      "sentry-expo>@sentry/react-native>@sentry/cli": false,
-      "sentry-expo>@sentry/react-native>@sentry/wizard>@sentry/cli": false
+      "secp256k1": false
     }
   }
 }
