--- a/package.json
+++ b/package.json
@@ -213,6 +213,7 @@
     "react-native-web": "0.21.2",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
+    "react-refresh": "0.18.0",
     "react-router-dom": "^6.8.1",
     "react-tooltip": "^5.26.3",
     "readable-stream": "1.0.33",
