--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "babel-jest": "^29.5.0",
     "babel-plugin-module-resolver": "4.1.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-    "babel-preset-expo": "^54.0.10",
+    "babel-preset-expo": "54.0.10",
     "bip39": "^3.1.0",
     "bip44-constants": "^128.0.0",
     "browserify-zlib": "~0.1.4",
