--- a/.github/workflows/dependency-age-gate.yml
+++ b/.github/workflows/dependency-age-gate.yml
@@ -32,8 +32,8 @@ jobs:
             echo "Fetching base branch origin/${{ github.base_ref }} for lockfile diff"
             git fetch origin "${{ github.base_ref }}" --depth=1
           else
-            # On push runs, make sure origin/main exists (some checkouts may not fetch it explicitly).
-            git fetch origin main --depth=1 || true
+            # On push runs, make sure origin/v2 exists (some checkouts may not fetch it explicitly).
+            git fetch origin v2 --depth=1 || true
           fi
 
           echo "Running dependency age check"
