--- a/package.json
+++ b/package.json
@@ -59,8 +59,9 @@
   },
   "engines": {
     "node": ">=24.13.0 <25.0.0",
-    "yarn": ">=1.22.0 <2.0.0"
+    "yarn": ">=1.22.22 <2.0.0"
   },
+  "packageManager": "yarn@1.22.22",
   "dependencies": {
     "@ambire/signature-validator": "^1.5.0",
     "@dnd-kit/core": "^6.3.1",
