--- a/package.json
+++ b/package.json
@@ -63,35 +63,35 @@
   },
   "packageManager": "yarn@1.22.22",
   "dependencies": {
-    "@ambire/signature-validator": "^1.5.0",
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/modifiers": "^9.0.0",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
-    "@ensdomains/eth-ens-namehash": "^2.0.15",
+    "@ambire/signature-validator": "1.5.0",
+    "@dnd-kit/core": "6.3.1",
+    "@dnd-kit/modifiers": "9.0.0",
+    "@dnd-kit/sortable": "10.0.0",
+    "@dnd-kit/utilities": "3.2.2",
+    "@ensdomains/eth-ens-namehash": "2.0.15",
     "@ethereumjs/rlp": "5.0.2",
     "@ethersproject/providers": "5.5.2",
-    "@ethersproject/shims": "^5.5.0",
+    "@ethersproject/shims": "5.7.0",
     "@expo-google-fonts/poppins": "0.2.2",
-    "@expo-google-fonts/roboto": "^0.2.3",
+    "@expo-google-fonts/roboto": "0.2.3",
     "@expo/vector-icons": "15.0.3",
-    "@fortawesome/fontawesome-free": "^6.6.0",
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fortawesome/fontawesome-free": "6.6.0",
+    "@fortawesome/fontawesome-svg-core": "6.6.0",
+    "@fortawesome/free-brands-svg-icons": "6.6.0",
+    "@fortawesome/free-solid-svg-icons": "6.6.0",
+    "@fortawesome/react-fontawesome": "0.2.2",
     "@gnosis.pm/safe-apps-sdk": "6.2.0",
-    "@gorhom/portal": "^1.0.11",
+    "@gorhom/portal": "1.0.14",
     "@ledgerhq/context-module": "1.11.1",
     "@ledgerhq/device-management-kit": "0.13.0",
     "@ledgerhq/device-signer-kit-ethereum": "1.9.4",
     "@ledgerhq/device-transport-kit-web-hid": "1.2.2",
     "@ledgerhq/react-native-hw-transport-ble": "6.32.5",
     "@metamask/eth-sig-util": "8.2.0",
-    "@metamask/obs-store": "^6.0.2",
-    "@noble/hashes": "^1.8.0",
-    "@otplib/preset-default": "^12.0.1",
-    "@raugfer/jazzicon": "^1.0.6",
+    "@metamask/obs-store": "6.0.2",
+    "@noble/hashes": "1.8.0",
+    "@otplib/preset-default": "12.0.1",
+    "@raugfer/jazzicon": "1.0.6",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "6.3.1",
@@ -101,37 +101,37 @@
     "@react-navigation/native-stack": "6.6.2",
     "@sentry/browser": "10.37.0",
     "@sentry/react": "10.37.0",
-    "@tradle/react-native-http": "^2.0.0",
+    "@tradle/react-native-http": "2.0.1",
     "@trezor/connect-plugin-ethereum": "9.1.5",
     "@trezor/connect-webextension": "9.7.1",
-    "@trezor/trezor-user-env-link": "^1.0.0",
-    "@types/js-yaml": "^4.0.9",
+    "@trezor/trezor-user-env-link": "1.0.0",
+    "@types/js-yaml": "4.0.9",
     "@types/react-dom": "19.1.7",
-    "@types/w3c-web-hid": "^1.0.6",
+    "@types/w3c-web-hid": "1.0.6",
     "aes-js": "3.1.2",
-    "babel-jest": "^29.5.0",
+    "babel-jest": "29.7.0",
     "babel-plugin-module-resolver": "4.1.0",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "babel-plugin-transform-inline-environment-variables": "0.4.4",
     "babel-preset-expo": "54.0.10",
-    "bip39": "^3.1.0",
-    "bip44-constants": "^128.0.0",
-    "browserify-zlib": "~0.1.4",
-    "buffer": "^6.0.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "crypto-browserify": "^3.12.0",
-    "crypto-js": "^4.1.1",
+    "bip39": "3.1.0",
+    "bip44-constants": "128.0.0",
+    "browserify-zlib": "0.1.4",
+    "buffer": "6.0.3",
+    "clean-webpack-plugin": "4.0.0",
+    "crypto-browserify": "3.12.1",
+    "crypto-js": "4.2.0",
     "debounce": "1.2.1",
-    "dkim": "^0.7.0",
-    "dkim-key": "^1.3.0",
-    "dkim-signature": "^1.3.0",
-    "dns-js": "^0.3.1",
-    "dns.js": "^1.0.1",
-    "eth-block-tracker": "^5.0.1",
-    "eth-crypto": "^2.8.0",
-    "eth-json-rpc-filters": "^6.0.0",
-    "eth-rpc-errors": "^4.0.3",
+    "dkim": "0.7.2",
+    "dkim-key": "1.3.0",
+    "dkim-signature": "1.3.0",
+    "dns-js": "0.3.1",
+    "dns.js": "1.0.1",
+    "eth-block-tracker": "5.0.1",
+    "eth-crypto": "2.8.0",
+    "eth-json-rpc-filters": "6.0.0",
+    "eth-rpc-errors": "4.0.3",
     "ethers": "6.14.1",
-    "events": "^3.3.0",
+    "events": "3.3.0",
     "expo": "54.0.32",
     "expo-application": "7.0.8",
     "expo-asset": "12.0.12",
@@ -155,86 +155,86 @@
     "expo-updates": "29.0.16",
     "fuse.js": "7.1.0",
     "gridplus-sdk": "4.0.0",
-    "https-browserify": "~0.0.0",
-    "i18next": "^21.6.0",
-    "intro.js": "^7.2.0",
-    "intro.js-react": "^1.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "https-browserify": "0.0.1",
+    "i18next": "21.10.0",
+    "intro.js": "7.2.0",
+    "intro.js-react": "1.0.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "jest-expo": "54.0.16",
-    "js-yaml": "^4.1.0",
-    "koa-compose": "^4.1.0",
+    "js-yaml": "4.1.0",
+    "koa-compose": "4.1.0",
     "lodash": "4.17.21",
-    "loglevel": "^1.9.2",
+    "loglevel": "1.9.2",
     "lottie-ios": "3.4.0",
     "lottie-react": "2.4.1",
     "lottie-react-native": "7.3.5",
     "lru-cache": "6.0.0",
-    "mini-css-extract-plugin": "^2.7.6",
+    "mini-css-extract-plugin": "2.7.6",
     "nanoid": "4.0.0",
     "ox": "0.8.9",
     "path-browserify": "0.0.0",
-    "process": "^0.11.0",
+    "process": "0.11.10",
     "purify-ts": "2.1.0",
-    "querystring-es3": "~0.2.0",
+    "querystring-es3": "0.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-dropzone": "^14.2.3",
-    "react-fast-compare": "^3.2.2",
+    "react-dropzone": "14.2.3",
+    "react-fast-compare": "3.2.2",
     "react-hook-form": "7.71.1",
-    "react-i18next": "^11.14.3",
-    "react-idle-timer": "^5.7.2",
+    "react-i18next": "11.18.6",
+    "react-idle-timer": "5.7.2",
     "react-native": "0.81.5",
     "react-native-android-location-services-dialog-box": "2.8.2",
-    "react-native-app-intro-slider": "^4.0.4",
-    "react-native-ble-plx": "^2.0.3",
-    "react-native-confirmation-code-field": "^7.3.0",
-    "react-native-error-boundary": "^1.2.3",
-    "react-native-fast-crypto": "^2.2.0",
+    "react-native-app-intro-slider": "4.0.4",
+    "react-native-ble-plx": "2.0.3",
+    "react-native-confirmation-code-field": "7.3.1",
+    "react-native-error-boundary": "1.2.3",
+    "react-native-fast-crypto": "2.2.0",
     "react-native-gesture-handler": "2.28.0",
     "react-native-get-random-values": "1.11.0",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-linear-gradient": "^2.6.2",
-    "react-native-mmkv": "^2.4.3",
-    "react-native-modalize": "^2.1.1",
-    "react-native-performance": "^2.1.0",
-    "react-native-qrcode-svg": "^6.3.15",
-    "react-native-quick-base64": "^2.0.5",
-    "react-native-quick-crypto": "^0.5.0",
+    "react-native-keyboard-aware-scroll-view": "0.9.5",
+    "react-native-linear-gradient": "2.6.2",
+    "react-native-mmkv": "2.5.1",
+    "react-native-modalize": "2.1.1",
+    "react-native-performance": "2.1.0",
+    "react-native-qrcode-svg": "6.3.15",
+    "react-native-quick-base64": "2.0.5",
+    "react-native-quick-crypto": "0.5.0",
     "react-native-reanimated": "4.1.1",
     "react-native-safe-area-context": "5.6.2",
     "react-native-screens": "4.16.0",
-    "react-native-step-indicator": "^1.0.3",
+    "react-native-step-indicator": "1.0.3",
     "react-native-svg": "15.12.1",
     "react-native-web": "0.21.2",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "react-refresh": "0.18.0",
-    "react-router-dom": "^6.8.1",
-    "react-tooltip": "^5.26.3",
+    "react-router-dom": "6.8.1",
+    "react-tooltip": "5.26.3",
     "readable-stream": "1.0.33",
     "reflect-metadata": "0.2.2",
-    "rxjs": "^7.8.2",
-    "scrypt-js": "^3.0.1",
-    "secp256k1": "^5.0.1",
-    "setimmediate": "^1.0.5",
+    "rxjs": "7.8.2",
+    "scrypt-js": "3.0.1",
+    "secp256k1": "5.0.1",
+    "setimmediate": "1.0.5",
     "siwe": "3.0.0",
-    "stream-browserify": "^3.0.0",
-    "string_decoder": "~0.10.25",
-    "swiper": "^11.1.14",
-    "timers-browserify": "^1.0.1",
+    "stream-browserify": "3.0.0",
+    "string_decoder": "0.10.31",
+    "swiper": "11.1.14",
+    "timers-browserify": "1.4.2",
     "tldts": "7.0.17",
-    "toggle-switch-react-native": "^3.3.0",
-    "ts-toolbelt": "^9.6.0",
-    "tslib": "^2.8.1",
-    "tv4": "^1.3.0",
-    "url": "~0.10.1",
-    "util": "~0.10.3",
+    "toggle-switch-react-native": "3.3.0",
+    "ts-toolbelt": "9.6.0",
+    "tslib": "2.8.1",
+    "tv4": "1.3.0",
+    "url": "0.10.3",
+    "util": "0.10.4",
     "uuid": "9.0.0",
-    "validator": "^13.7.0",
+    "validator": "13.7.0",
     "viem": "2.41.2",
     "vm-browserify": "0.0.4",
-    "webextension-polyfill": "^0.10.0"
+    "webextension-polyfill": "0.10.0"
   },
   "devDependencies": {
     "@babel/core": "7.28.6",
@@ -253,25 +253,25 @@
     "@lavamoat/allow-scripts": "3.4.2",
     "@lavamoat/preinstall-always-fail": "2.1.1",
     "@lifi/types": "17.46.0",
-    "@types/aes-js": "^3.1.4",
-    "@types/chrome": "^0.0.212",
-    "@types/crypto-js": "^4.1.1",
+    "@types/aes-js": "3.1.4",
+    "@types/chrome": "0.0.212",
+    "@types/crypto-js": "4.1.1",
     "@types/debounce": "1.2.1",
-    "@types/firefox-webext-browser": "^109.0.0",
-    "@types/hdkey": "^0.7.0",
+    "@types/firefox-webext-browser": "109.0.0",
+    "@types/hdkey": "0.7.1",
     "@types/jest": "29.5.14",
     "@types/koa-compose": "3.2.5",
     "@types/lodash": "4.14.191",
     "@types/react": "19.1.10",
     "@types/react-test-renderer": "17.0.1",
     "@types/uuid": "9.0.0",
-    "@types/validator": "^13.7.0",
+    "@types/validator": "13.7.10",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
     "babel-loader": "10.0.0",
-    "copy-webpack-plugin": "^10.2.0",
-    "css-loader": "^7.1.2",
-    "dotenv": "^16.3.1",
+    "copy-webpack-plugin": "10.2.4",
+    "css-loader": "7.1.2",
+    "dotenv": "16.6.1",
     "eslint": "8.57.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "18.0.0",
@@ -281,27 +281,27 @@
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "4.6.2",
-    "eslint-plugin-react-native": "^5.0.0",
+    "eslint-plugin-react-native": "5.0.0",
     "globals": "15.9.0",
-    "html-webpack-plugin": "^5.6.0",
-    "imapflow": "^1.0.136",
+    "html-webpack-plugin": "5.6.0",
+    "imapflow": "1.0.160",
     "node-polyfill-webpack-plugin": "2.0.1",
-    "otplib": "^12.0.1",
-    "patch-package": "^8.0.0",
-    "postinstall-postinstall": "^2.1.0",
+    "otplib": "12.0.1",
+    "patch-package": "8.0.0",
+    "postinstall-postinstall": "2.1.0",
     "prettier": "3.3.3",
-    "react-native-dotenv": "^3.4.2",
-    "sass": "^1.79.2",
-    "sass-loader": "^16.0.1",
-    "style-loader": "^4.0.0",
-    "ts-jest": "^29.1.2",
+    "react-native-dotenv": "3.4.7",
+    "sass": "1.79.2",
+    "sass-loader": "16.0.2",
+    "style-loader": "4.0.0",
+    "ts-jest": "29.1.2",
     "tsc-baseline": "1.9.0",
     "typescript": "5.9.3",
-    "webpack": "^5.64.4",
-    "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^4.11.1",
+    "webpack": "5.84.1",
+    "webpack-cli": "5.1.1",
+    "webpack-dev-server": "4.15.0",
     "webpack-sources": "3.2.3",
-    "webpack-target-webextension": "^1.1.2"
+    "webpack-target-webextension": "1.1.2"
   },
   "resolutions": {
     "elliptic": "^6.6.1",
